# PencilCase

./: .gitignore  PencilCase.sln  README.md  azure-pipelines.yml
.github/workflows/: azure-static-web-apps-agreeable-rock-097691f0f.yml  main.yml  main_pencilcase-llmservice.yml
PencilCase.Shared.Files/: PencilCase.Shared.Files.csproj
PencilCase.Shared.Files/FileExporters/: FileExporter.cs  MarkdownExporter.cs  PdfAttributes.cs  PdfDefaultAttributes.cs  PdfExporter.cs  TextFileExporter.cs
PencilCase.Shared.Files/Types/: BinaryFile.cs  MarkdownFile.cs  PdfFile.cs  TextFile.cs
PencilCase.Shared.Models/: Class1.cs
PencilCase.Shared.Models/Download/: FileDownload.cs  MarkdownDownload.cs
PencilCase.Shared.Models/DownloadFile/: MarkdownFile.cs  TextFile.cs
PencilCase.Shared.Models/FileFormat/: FileDownload.cs  MarkdownDownload.cs
PencilCase.Shared.Models/StudyGuide/: Fragment.cs  GeneratedFragment.cs  StudyGuide.cs
PencilCase.Web/: PencilCase.Web.csproj  Program.cs  _Imports.razor
PencilCase.Web/Components/: AvailableFragment.razor  AvailableFragmentsList.razor  FeatureShowcase.razor  FragmentCard.razor  FragmentDropZone.razor  FragmentGeneratorCard.razor  FragmentGeneratorsList.razor  Logo.razor  MainDrawer.razor  ScrollingTagList.razor  ScrollingTagList.razor.css  SearchBar.razor  StudyGuideList.razor
llm-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
llm-service/app/: api_builder.py  server.py
llm-service/app/generators/: applications.py  generator.py  introduction.py  nextsteps.py  roadmap.py  videos.py  wikipedia.py
(+96 files in other folders)
