[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = ""
authors = ["JoaoPito <joao.pito@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langsmith = "^0.1.129"
langchain-community = "^0.3.1"
langchain-core = "^0.3.7"
youtube-search = "^2.1.2"
wikipedia = "^1.4.0"
uvicorn = "^0.31.0"
langserve = "^0.3.0"
langchain-google-genai = "^2.0.0"
fastapi = "^0.115.0"
python-decouple = "^3.8"
sse-starlette = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
